--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   dio: ^5.3.2
   shimmer: ^3.0.0
   google_fonts: ^6.0.0
+  salomon_bottom_bar: ^3.3.2
+  firebase_core: ^2.16.0
+  firebase_auth: ^4.10.0
 
 dev_dependencies:
   flutter_test:
